[gd_scene load_steps=2 format=3 uid="uid://clei3idjfq7p7"]

[ext_resource type="Script" path="res://scripts/world_ui.gd" id="1_ufpos"]

[node name="WorldUI" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -156.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ufpos")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeHSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 33.0
offset_right = 334.0
offset_bottom = 49.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="TimeLabel" type="Label" parent="TimeHSlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -13.0
offset_right = -10.0
offset_bottom = 13.0
grow_vertical = 2
text = "Temps : "
vertical_alignment = 1

[node name="TimeValue" type="Label" parent="TimeHSlider"]
layout_mode = 0
offset_left = 240.0
offset_top = -1.0
offset_right = 280.0
offset_bottom = 25.0
text = "1.0"

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 177.0
offset_top = 86.0
offset_right = 233.0
offset_bottom = 117.0
text = "START"

[node name="Ressources" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 176.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
columns = 4
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ressources"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldRessources" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Monde"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColonyRessources" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Colonie"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColonyNeeds" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Besoins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Water" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Eau"
horizontal_alignment = 1
vertical_alignment = 1

[node name="W_Water" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="C_Water" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="N_Water" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Food" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Nourriture"
horizontal_alignment = 1
vertical_alignment = 1

[node name="W_Food" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="C_Food" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="N_Food" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wood" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Bois"
horizontal_alignment = 1
vertical_alignment = 1

[node name="W_Wood" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="C_Wood" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="N_Wood" type="Label" parent="Ressources"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Climate" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 750.0
offset_top = -130.0
offset_right = 808.0
offset_bottom = -104.0
grow_vertical = 0
text = "Météo :"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="CurrentClimate" type="Label" parent="Climate"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -30.0
offset_right = 142.0
offset_bottom = 30.0
grow_vertical = 2
text = "Ciel bleu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Day" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -55.0
offset_right = 58.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
text = "Jour :"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="CurrentDay" type="Label" parent="Day"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -30.0
offset_right = 142.0
offset_bottom = 30.0
grow_vertical = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Objects" type="GridContainer" parent="."]
custom_minimum_size = Vector2(100, 20)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -15.0
offset_right = -40.0
offset_bottom = 85.0
grow_horizontal = 0
grow_vertical = 2
columns = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldRessources" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Objets dans l'épave"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bucket" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Seau"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BucketNumber" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FishingRod" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Canne à pêche"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FishingRodNumber" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Axe" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Hâche"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AxeNumber" type="Label" parent="Objects"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 93.0
offset_right = 110.0
offset_bottom = 124.0
text = "Retour"

[connection signal="value_changed" from="TimeHSlider" to="." method="_on_time_h_slider_value_changed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
